2011-05-21  Holger Vogt
 * windisp.c, winprint.c, windisp.h, winprint.h, display.c xdisplay.c,
   winmain.c: reduce compiler warnings 

2011-05-20  Robert Larice
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml:
    revert ngspiceMakfile.am.xml

2011-05-19  Dietmar Warning
 * spicelib/devices/bsim3v32/b3v32temp.c: move the mulu0 entry outside
   the size dependent section, like delvto

2011-05-19  Robert Larice
 * autogen.sh :
    update --adms3

2011-05-19  Robert Larice
 * autogen.sh :
    add --adms3 to autogen.sh

2011-05-19  Robert Larice
 * src/spicelib/parser/inpptree-parser.c,
 * src/spicelib/parser/inpptree-parser.h,
 * src/frontend/parse-bison.c,
 * src/frontend/parse-bison.h:
    undo the accidental commit of intemediate files

2011-05-19  Laurent Lemaitre
    remove usage of ngspiceVersion.xml in autogen.sh

2011-05-19  Laurent Lemaitre
    all xml files are concatenated into one single file ngspice.xml - except ngspiceMakefile.am.xml

2011-05-15  Holger Vogt
 * inp2z.c: remove checking for thismodel->INPmodType
   because this might lead to segfault if the user supplies
   a wrong ZXXXXX input

2011-05-08  Robert Larice
 * src/frontend/shyu.c ,
 * src/frontend/spiceif.c ,
 * src/spicelib/analysis/cktdest.c ,
 * src/spicelib/analysis/cktdltm.c ,
 * src/spicelib/analysis/cktdltn.c ,
 * src/spicelib/analysis/cktdojob.c ,
 * src/spicelib/analysis/cktfnda.c ,
 * src/spicelib/analysis/cktgrnd.c ,
 * src/spicelib/analysis/cktneweq.c ,
 * src/spicelib/analysis/cktnewn.c ,
 * src/spicelib/analysis/cktparam.c ,
 * src/spicelib/analysis/ckttroub.c ,
 * src/spicelib/devices/cktask.c ,
 * src/spicelib/devices/cktbindnode.c ,
 * src/spicelib/devices/cktcrte.c ,
 * src/spicelib/devices/cktfinddev.c ,
 * src/xspice/ipc/ipctiein.c :
    mop up some fixme comments

2011-05-08  Robert Larice
 * src/frontend/help/x11disp.c :
    cleanup Xt usage

2011-05-08  Robert Larice
 * xgraph/alloc.c :
    rename macros public and private  -->  PUBLIC and PRIVATE
